cabal-version:       2.2
name:                lojbanios
version:             0.1.0.0
synopsis:            Lojban teaching platform
description:         A free and opensource platform for studying the artificial language Lojban.
homepage:            None
license:             NONE
license-file:        LICENSE
author:              Jonathan Queiroz
maintainer:          dev@johnjq.com
copyright:           2016 Jonathan Queiroz
category:            Web
build-type:          Simple

common deps
  default-language:    Haskell2010
  build-depends:       base
                     , text
                     , bytestring
                     , containers
                     , data-ordlist
                     , transformers
                     , either
                     , monad-extras
                     , mtl
                     , file-embed
                     , either-unwrap
                     , pandoc
                     , yaml
                     , aeson
                     , random
                     , random-shuffle
                     , unordered-containers
                     , split
                     , hedis
                     , blaze-html
                     , blaze-markup
                     , happstack-server
                     , hoauth2
                     , uri-bytestring
                     , base64-bytestring
                     , http-client
                     , http-client-tls
                     , http-types
                     , jose-jwt
                     , oidc-client
                     , uuid
                     , papillon
                     , zasni-gerna
                     , eberban-parser

library
  import:              deps
  hs-source-dirs:      haskell/src
  ghc-options: -j +RTS -A128m -RTS -Wall -Wcompat -Wincomplete-record-updates -Wredundant-constraints -Wno-incomplete-patterns -Wno-unused-top-binds -Wno-unused-matches -Wno-unused-local-binds -Wno-name-shadowing -Wno-type-defaults -Wno-partial-type-signatures
  --ghc-options: -j8 -O2 -static -threaded -Wall
  --cc-options: -j8 -static
  --ld-options: -static -pthread
  exposed-modules:     Core
                     , Serializer
                     , Study.Courses.CourseStore
                     , Study.Framework.DocumentBuilders
                     , Study.Framework.Eberban.ExerciseGenerators
                     , Study.Framework.Lojban.ExerciseGenerators
                     , Study.Framework.Lojban.ExerciseUtils
                     , Study.Framework.Lojban.Extractors
                     , Study.Framework.Lojban.SentenceGenerators
                     , Study.Framework.Lojban.TranslationLoaders
                     , Study.Framework.Lojban.TranslationUtils
                     , Study.Framework.Lojban.VocabularyLoaders
                     , Study.Courses.English.Grammar.Introduction.Course
                     , Study.Courses.English.Grammar.Introduction.Documents
                     , Study.Courses.English.Grammar.Introduction.Exercises
                     , Study.Courses.English.Grammar.Introduction.Lessons
                     , Study.Courses.English.Grammar.Introduction.Strategies
                     , Study.Courses.English.Grammar.Introduction.Translations
                     , Study.Courses.English.Grammar.Introduction.Vocabulary
                     , Study.Courses.English.Grammar.Crash.Course
                     , Study.Courses.English.Grammar.Crash.Documents
                     , Study.Courses.English.Grammar.Crash.Exercises
                     , Study.Courses.English.Grammar.Crash.Lessons
                     , Study.Courses.English.Grammar.Crash.Translations
                     , Study.Courses.English.Grammar.Crash.Vocabulary
                     , Study.Courses.English.Vocabulary.Attitudinals.Course
                     , Study.Courses.English.Vocabulary.Attitudinals.Documents
                     , Study.Courses.English.Vocabulary.Attitudinals.Exercises
                     , Study.Courses.English.Vocabulary.Attitudinals.Glossary
                     , Study.Courses.English.Vocabulary.Attitudinals.Lessons
                     , Study.Courses.English.Vocabulary.Attitudinals.Model
                     , Study.Courses.English.Vocabulary.Attitudinals.Util
                     , Study.Courses.English.Vocabulary.Attitudinals.Vocabulary
                     , Study.Courses.English.Vocabulary.Brivla.Course
                     , Study.Courses.English.Vocabulary.Brivla.Exercises
                     , Study.Courses.English.Vocabulary.Brivla.Lessons
                     , Study.Courses.English.Vocabulary.Brivla.Translations
                     , Study.Courses.English.Vocabulary.Brivla.Vocabulary
                     , Study.Decks.DeckStore
                     , Study.Decks.English.ContextualizedBrivla
                     , Study.Decks.Eberban.English.Roots
                     , Language.Eberban.Core
                     , Language.Eberban.Dictionaries
                     , Language.Eberban.Parsing
                     , Language.Lojban.Canonicalization
                     , Language.Lojban.Canonicalization.Internals
                     , Language.Lojban.Core
                     , Language.Lojban.Dictionaries
                     , Language.Lojban.Dictionaries.English
                     , Language.Lojban.Numbers
                     , Language.Lojban.Parsing
                     , Language.Lojban.Presentation
                     , Language.Lojban.Refinement
                     , Server.Api.Main
                     , Server.Api.V0.Contract
                     , Server.Api.V0.Main
                     , Server.Api.V0.Serializers
                     , Server.Core
                     , Server.Logic.Decks
                     , Server.Logic.Redis
                     , Server.Main
                     , Server.Authentication.Main
                     , Server.Authentication.Google
                     , Server.Authentication.OpenID
                     , Server.Authentication.Handle
                     , Server.Authentication.Mock
                     , Server.Authentication.Utils
                     , Server.Util
                     , Server.Website.Main
                     , Server.Website.Views.Core
                     , Server.Website.Views.Course
                     , Server.Website.Views.Courses
                     , Server.Website.Views.Decks
                     , Server.Website.Views.Deck
                     , Server.Website.Views.Home
                     , Server.Website.Views.Lesson
                     , Server.Website.Views.Resources
                     , Server.Website.Views.Login
                     , Server.Website.Views.Offline
                     , Server.Website.Views.NotFound
                     , Util
                     , Playground

executable server
  default-language:    Haskell2010
  hs-source-dirs:      haskell/app
  main-is:             Main.hs
  ghc-options:         -j8 -threaded
  build-depends:       base
                     , optparse-applicative
                     , lojbanios

test-suite language
  import:              deps
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wno-missing-home-modules
  hs-source-dirs:      haskell/tests/language haskell/src
  build-depends:       hspec
                     , QuickCheck
  other-modules:       Core
                     , Language.Lojban.Canonicalization
                     , Language.Lojban.Canonicalization.Tests
                     , Language.Lojban.Canonicalization.Internals
                     , Language.Lojban.Core
                     , Language.Lojban.Parsing
                     , Language.Lojban.Presentation
                     , Util

test-suite study
  import:              deps
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wno-missing-home-modules
  hs-source-dirs:      haskell/tests/study haskell/src
  build-depends:       hspec
                     , QuickCheck
  other-modules:       Core
                     , Study.Framework.Eberban.ExerciseGenerators
                     , Study.Framework.Lojban.ExerciseGenerators
                     , Study.Framework.Lojban.TranslationUtils
                     , Study.Framework.Lojban.ExerciseGenerators.Tests
                     , Study.Framework.Lojban.SentenceGenerators
                     , Language.Lojban.Canonicalization
                     , Language.Lojban.Canonicalization.Internals
                     , Language.Lojban.Core
                     , Language.Lojban.Numbers
                     , Language.Lojban.Parsing
                     , Language.Lojban.Presentation
                     , Language.Lojban.Refinement
                     , Util

test-suite exercises
  import:              deps
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wno-missing-home-modules
  hs-source-dirs:      haskell/tests/exercises haskell/src
  build-depends:       hspec
                     , QuickCheck
  other-modules:       Core
                     , Util
                     , Exercises.Tests
                     , Language.Lojban.Canonicalization
                     , Language.Lojban.Canonicalization.Internals
                     , Language.Lojban.Core
                     , Language.Lojban.Dictionaries
                     , Language.Lojban.Dictionaries.English
                     , Language.Lojban.Numbers
                     , Language.Lojban.Parsing
                     , Language.Lojban.Presentation
                     , Language.Lojban.Refinement
                     , Study.Courses.CourseStore
                     , Study.Framework.DocumentBuilders
                     , Study.Framework.Eberban.ExerciseGenerators
                     , Study.Framework.Lojban.ExerciseGenerators
                     , Study.Framework.Lojban.ExerciseUtils
                     , Study.Framework.Lojban.Extractors
                     , Study.Framework.Lojban.SentenceGenerators
                     , Study.Framework.Lojban.TranslationLoaders
                     , Study.Framework.Lojban.TranslationUtils
                     , Study.Framework.Lojban.VocabularyLoaders
                     , Study.Courses.English.Grammar.Introduction.Course
                     , Study.Courses.English.Grammar.Introduction.Documents
                     , Study.Courses.English.Grammar.Introduction.Exercises
                     , Study.Courses.English.Grammar.Introduction.Lessons
                     , Study.Courses.English.Grammar.Introduction.Strategies
                     , Study.Courses.English.Grammar.Introduction.Translations
                     , Study.Courses.English.Grammar.Introduction.Vocabulary
                     , Study.Courses.English.Grammar.Crash.Course
                     , Study.Courses.English.Grammar.Crash.Documents
                     , Study.Courses.English.Grammar.Crash.Exercises
                     , Study.Courses.English.Grammar.Crash.Lessons
                     , Study.Courses.English.Grammar.Crash.Translations
                     , Study.Courses.English.Grammar.Crash.Vocabulary
                     , Study.Courses.English.Vocabulary.Attitudinals.Course
                     , Study.Courses.English.Vocabulary.Attitudinals.Documents
                     , Study.Courses.English.Vocabulary.Attitudinals.Exercises
                     , Study.Courses.English.Vocabulary.Attitudinals.Glossary
                     , Study.Courses.English.Vocabulary.Attitudinals.Lessons
                     , Study.Courses.English.Vocabulary.Attitudinals.Model
                     , Study.Courses.English.Vocabulary.Attitudinals.Util
                     , Study.Courses.English.Vocabulary.Attitudinals.Vocabulary
                     , Study.Courses.English.Vocabulary.Brivla.Course
                     , Study.Courses.English.Vocabulary.Brivla.Exercises
                     , Study.Courses.English.Vocabulary.Brivla.Lessons
                     , Study.Courses.English.Vocabulary.Brivla.Translations
                     , Study.Courses.English.Vocabulary.Brivla.Vocabulary
                     , Study.Decks.DeckStore
                     , Study.Decks.English.ContextualizedBrivla
                     , Study.Decks.Eberban.English.Roots
