cabal-version:       2.2
name:                lojto
version:             0.1.0.0
synopsis:            Lojban learning tool
description:         Please see README.md
homepage:            None
license:             NONE
license-file:        LICENSE
author:              Jonathan Queiroz
maintainer:          dev@johnjq.com
copyright:           2016 Jonathan Queiroz
category:            Web
build-type:          Simple

common deps
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , containers
                     , data-ordlist
                     , transformers
                     , file-embed
                     , either-unwrap
                     , pandoc
                     , yaml
                     , aeson
                     , random
                     , random-shuffle
                     , split
                     , blaze-html
                     , blaze-markup
                     , happstack-server
                     , papillon
                     , zasni-gerna

library
  import:              deps
  hs-source-dirs:      src
  ghc-options: -j +RTS -A128m -RTS -Wall -Wcompat -Wincomplete-record-updates -Wredundant-constraints -Wno-incomplete-patterns -Wno-unused-top-binds -Wno-unused-matches -Wno-unused-local-binds -Wno-name-shadowing -Wno-type-defaults
  --ghc-options: -j8 -O2 -static -threaded -Wall
  --cc-options: -j8 -static
  --ld-options: -static -pthread
  exposed-modules:     Core
                     , Serializer
                     , Courses.Framework.DocumentBuilders
                     , Courses.Framework.ExerciseGenerators
                     , Courses.Framework.ExerciseUtils
                     , Courses.Framework.Extractors
                     , Courses.Framework.SentenceGenerators
                     , Courses.Framework.TranslationLoaders
                     , Courses.Framework.TranslationUtils
                     , Courses.Framework.VocabularyLoaders
                     , Courses.English.Grammar.Introduction.Course
                     , Courses.English.Grammar.Introduction.Documents
                     , Courses.English.Grammar.Introduction.Exercises
                     , Courses.English.Grammar.Introduction.Lessons
                     , Courses.English.Grammar.Introduction.Strategies
                     , Courses.English.Grammar.Introduction.Translations
                     , Courses.English.Grammar.Introduction.Vocabulary
                     , Courses.English.Grammar.Crash.Course
                     , Courses.English.Grammar.Crash.Documents
                     , Courses.English.Grammar.Crash.Exercises
                     , Courses.English.Grammar.Crash.Lessons
                     , Courses.English.Grammar.Crash.Translations
                     , Courses.English.Grammar.Crash.Vocabulary
                     , Courses.English.Vocabulary.Attitudinals.Course
                     , Courses.English.Vocabulary.Attitudinals.Documents
                     , Courses.English.Vocabulary.Attitudinals.Exercises
                     , Courses.English.Vocabulary.Attitudinals.Glossary
                     , Courses.English.Vocabulary.Attitudinals.Lessons
                     , Courses.English.Vocabulary.Attitudinals.Model
                     , Courses.English.Vocabulary.Attitudinals.Util
                     , Courses.English.Vocabulary.Attitudinals.Vocabulary
                     , Courses.English.Vocabulary.Brivla.Course
                     , Courses.English.Vocabulary.Brivla.Exercises
                     , Courses.English.Vocabulary.Brivla.Lessons
                     , Courses.English.Vocabulary.Brivla.Translations
                     , Courses.English.Vocabulary.Brivla.Vocabulary
                     , Language.Lojban.Canonicalization
                     , Language.Lojban.Canonicalization.Internals
                     , Language.Lojban.Core
                     , Language.Lojban.Dictionaries
                     , Language.Lojban.Dictionaries.English
                     , Language.Lojban.Numbers
                     , Language.Lojban.Parsing
                     , Language.Lojban.Presentation
                     , Language.Lojban.Refinement
                     , Server.Core
                     , Server.Course
                     , Server.Grammar
                     , Server.Home
                     , Server.Lesson
                     , Server.Main
                     , Server.Resources
                     , Server.Vocabulary
                     , Util
                     , Playground

executable server
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -j8 -threaded
  build-depends:       base
                     , lojto

test-suite language
  import:              deps
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wno-missing-home-modules
  hs-source-dirs:      tests/language src
  build-depends:       hspec
                     , QuickCheck
  other-modules:       Core
                     , Language.Lojban.Canonicalization
                     , Language.Lojban.Canonicalization.Tests
                     , Language.Lojban.Canonicalization.Internals
                     , Language.Lojban.Core
                     , Language.Lojban.Parsing
                     , Language.Lojban.Presentation
                     , Util

test-suite courses
  import:              deps
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wno-missing-home-modules
  hs-source-dirs:      tests/courses src
  build-depends:       hspec
                     , QuickCheck
  other-modules:       Core
                     , Courses.Framework.ExerciseGenerators
                     , Courses.Framework.ExerciseGenerators.Tests
                     , Courses.Framework.SentenceGenerators
                     , Language.Lojban.Canonicalization
                     , Language.Lojban.Canonicalization.Internals
                     , Language.Lojban.Core
                     , Language.Lojban.Numbers
                     , Language.Lojban.Parsing
                     , Language.Lojban.Presentation
                     , Language.Lojban.Refinement
                     , Util
